--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Demo Marketing Website</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YSBDY6PT3K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YSBDY6PT3K');
+</script>
+  
 </head>
 <body>
   <h1>Analytics Demo Website</h1>
